# linux-fs

./: CMakeLists.txt  linux-fs.cmake
example/: CMakeLists.txt  char.c
include/: fs.h
include/fs/: char.h  control.h  ctl.h  dev.h  file.h  file_type.h  fops.h  in.h  out.h  poll.h  read.h  write.h
include/fs/chr/: chr.h  chr_type.h
src/: CMakeLists.txt  cdev.c  cdev.h  char.c  char.h  chr.h  control.c  control.h  ctl.c  ctl.h  dev.c  dev.h  file.c  file.h  file_type.c  file_type.h  fops.c  fops.h  fs.c  fs.h  in.c  in.h  ioctl.c  ioctl.h  out.c  out.h  poll.c  poll.h  read.c  read.h  use.c  use.h  write.c  write.h
src/chr/: chr.c  chr.h  chr_type.c  chr_type.h
